--- a/css/index.css
+++ b/css/index.css
@@ -592,7 +592,7 @@ button {
   width: 25px;
   height: 25px;
   border-radius: 8px;
-  background: transparent;
+  background: #ffffff;
   position: absolute;
   top: 10px;
   right: 10px;
