--- a/css/index.css
+++ b/css/index.css
@@ -592,11 +592,15 @@ button {
   width: 25px;
   height: 25px;
   border-radius: 8px;
-  background: #ffffff;
   position: absolute;
   top: 10px;
   right: 10px;
   z-index: 5;
+}
+.overlay-close svg {
+  width: 25px;
+  height: 25px;
+  object-fit: cover;
 }
 .overlay-inner {
   width: 100%;
@@ -661,13 +665,10 @@ button {
   font-weight: bold;
 }
 .overlay-inner-separator {
-  width: 100%;
-  height: 1px;
-  display: block;
-  background: #d5d5d5;
   margin-top: 20px;
   margin-bottom: 20px;
-  box-sizing: border-box;
+  border: none;
+  border-top: 1px solid #ffffff;
 }
 .overlay-inner-title {
   font-family: "Montserrat_0", sans-serif;
@@ -721,8 +722,8 @@ button {
     padding: 0;
   }
   .overlay-content {
-    height: 80dvh;
-    padding: 20px 10px;
+    height: 70%;
+    padding: 20px 20px 10px 10px;
   }
   .overlay-inner__image {
     margin: 0 auto;
