--- a/fonts/css/css/index.css
+++ b/fonts/css/css/index.css
@@ -668,7 +668,7 @@ button {
   margin-top: 20px;
   margin-bottom: 20px;
   border: none;
-  border-top: 1px solid #d5d5d5;
+  border-top: 1px solid #ffffff;
 }
 .overlay-inner-title {
   font-family: "Montserrat_0", sans-serif;
