--- a/css/index.css
+++ b/css/index.css
@@ -463,6 +463,9 @@ button {
   width: 40px;
   height: 40px;
   border-radius: 50%;
+  -webkit-box-shadow: 0;
+  -moz-box-shadow: 0;
+  box-shadow: 0;
   transition: all 0.3s ease-out;
 }
 .main__social li a:hover {
