--- a/css/index.css
+++ b/css/index.css
@@ -173,7 +173,7 @@ button {
 }
 @media screen and (max-width: 480px) {
   .header__title {
-    max-width: 60%;
+    max-width: 160px;
   }
 }
 .header__logo {
